--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -38,59 +38,59 @@
                 <div class="triangle-down"></div>
                 <h2>Insira seus dados</h2>
 
-                <form action="" method="POST">
+                <form action="../routes/cadastro.js" method="POST">
                     <div id="form-content--PF" class="form-content form-content--visible">
                         <div class="caixa">
                             <label for="nome"></label>
-                            <input type="text" id="nome" name="nome" placeholder="Nome">
+                            <input type="text" id="nome" name="nome" placeholder="Nome" required>
                     
                             <label for="sobrenome"></label>
-                            <input type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome">
+                            <input type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome" required>
                         </div>
 
                         <div class="caixa2">
                             <label for="dataDeNascimento"></label>
-                            <input type="text" id="dataDeNascimento" name="dataDeNascimento" placeholder="Data de Nascimento">
+                            <input type="text" id="dataDeNascimento" name="dataDeNascimento" placeholder="Data de Nascimento" required>
 
                             <label for="identificadorFiscal"></label>
-                            <input type="text" id="identificadorFiscal" name="identificadorFiscal" placeholder="CPF">
+                            <input type="text" id="identificadorFiscal" name="identificadorFiscal" placeholder="CPF" required>
 
                             <label for="telefone"></label>
-                            <input type="text" id="telefone" name="telefone" placeholder="Telefone">
+                            <input type="text" id="telefone" name="telefone" placeholder="Telefone" required>
                         </div>
                     
                         <label for="email"></label>
                         <input type="email" id="email" name="email" placeholder="Email" required>
 
                         <label for="senha"></label>
-                        <input type="password" id="senha" name="senha" placeholder="Senha">
+                        <input type="password" id="senha" name="senha" placeholder="Senha" required>
                     </div>
 
                     <div id="form-content--PJ" class="form-content">
                         <div class="caixa">
                             <label for="nome"></label>
-                            <input type="text" id="nome" name="nome" placeholder="Nome">
+                            <input type="text" id="nome" name="nome" placeholder="Nome" required>
                     
                             <label for="sobrenome"></label>
-                            <input type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome">
+                            <input type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome" required>
                         </div>
     
                         <div class="caixa2">
                             <label for="nomeEmpresa"></label>
-                            <input type="text" id="nomeEmpresa" name="nomeEmpresa" placeholder="Nome da Empresa">
+                            <input type="text" id="nomeEmpresa" name="nomeEmpresa" placeholder="Nome da Empresa" required>
     
                             <label for="identificadorFiscal"></label>
-                            <input type="text" id="identificadorFiscal" name="identificadorFiscal" placeholder="CNPJ">
+                            <input type="text" id="identificadorFiscal" name="identificadorFiscal" placeholder="CNPJ" required>
     
                             <label for="telefone"></label>
-                            <input type="text" id="telefone" name="telefone" placeholder="Telefone">
+                            <input type="text" id="telefone" name="telefone" placeholder="Telefone" required>
                         </div>
                         
                             <label for="email"></label>
                             <input type="email" id="email" name="email" placeholder="Email" required>
     
                             <label for="senha"></label>
-                            <input type="password" id="senha" name="senha" placeholder="Senha">
+                            <input type="password" id="senha" name="senha" placeholder="Senha" required>
                     </div>
                     
                     <div class="termos">
